--- a/index.html
+++ b/index.html
@@ -3,23 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Organizações Mikaeles</title>
+    <meta name="description" content="Alvorada Digital - um refúgio de Vtuber e PNGtubers unidos pela criatividade e colaboração.">
+    <meta name="author" content="Alvorada Digital">
+    <link rel="icon" href="Imagens/logo-alvorada-digital.png" type="image/png">
+    <title>Alvorada Digital</title>
 </head>
 <body>
-    <h1>Seja Bem Vindo a Organizações Mikaeles</h1>
+
     <header>
-    <nav>
-        <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="cadastro.html">Cadastro</a></li>
-        <li><a href="projetos.html">Projetos</a></li>
-        </ul> 
-    </nav>
+        <img src="Imagens/logo-alvorada-digital.png" alt="Logo">
+        <h1>Bem-Vindo a Alvorada Digital</h1>
+        <p>Um refúgio de Vtubers e PNGTubers, onde sonhos e criações ganham vida sob a luz de uma nova aurora.</p>
+
+        <nav>
+            <ul>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="projetos.html">Projetos</a></li>
+                <li><a href="cadastro.html">Cadastro</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-
-
+        <h2>Quem Somos</h2>
+        <p>Somos uma organização que procura ajudar Vtubers e PNGTubers menores a crescerem, sem fins lucrativos, promovendo colaboração e visibilidade.</p>
     </main>
+
+    <section>
+        <h2>Missão, Visão e Valores</h2>
+        <ul>
+            <li><strong>Missão:</strong> Promover a união entre criadores digitais independentes.</li>
+            <li><strong>Visão:</strong> Tornar-se referência de apoio e colaboração no meio digital.</li>
+            <li><strong>Valores:</strong> Respeito, criatividade e solidariedade.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Nossa História</h2>
+        <p>Alvorada Digital surgiu em 2025 com o propósito de apoiar criadores virtuais, conectando talentos e fortalecendo comunidades do meio Vtuber e PNGTuber.</p>
+    </section>
+
+    <figure>
+        <img src="Imagens/Os-talentos.jpg" alt="Os talentos">
+        <figcaption>Comunidade de Vtuber e PNGtubers com seus modelos.</figcaption>
+    </figure>
+
+    <section>
+        <h3>Se estiver com alguma dúvida, fale conosco</h3>
+        <address>
+            <p>E-mail: alvoradadigital@gmail.com</p>
+            <p>Telefone (11) 98838-7412</p>
+        </address>
+    </section>
+
+    <footer>
+            <p>&copy; 2025 Alvorada Digital</p>
+    </footer>
+
 </body>
 </html>
