--- a/projetos.html
+++ b/projetos.html
@@ -3,18 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Alvorada Digital - um refúgio de Vtuber e PNGtubers unidos pela criatividade e colaboração.">
+    <meta name="author" content="Alvorada Digital">
+    <link rel="icon" href="Imagens/logo-alvorada-digital.png" type="image/png">
+    <title>Projetos - Alvorada Digital</title>
 </head>
 <body>
     <header>
-    <nav>
-        <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="cadastro.html">Cadastro</a></li>
-        <li><a href="projetos.html">Projetos</a></li>
-        </ul>
-    </nav>
+        <h1>Nossos Projetos</h1>
+        <img src="Imagens/logo-alvorada-digital.png" alt="Logo">
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="projetos.html">Projetos</a></li>
+                <li><a href="cadastro.html">Cadastro</a></li>
+            </ul>
+        </nav>
     </header>
     
+    <main>
+
+        <section>
+        <h2>Nossos Projetos</h2>
+        <p>Conheça as iniciativas voltadas a apoiar e promover nossos talentos</p>
+        <img src="Imagens/ambos-se-ajudando.jpg" alt="Nossos Talentos">
+        </section>
+
+        <section>
+            <h2>Como Posso Participar</h2>
+            <p>Para participar é bem simples... Só ir na barra de cadastro colocar os dado do seu Vtuber ou PNGtuber e seu canal e E-mail de contato</p>
+        </section>
+
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Alvorada Digital</p>
+    </footer>
 </body>
 </html>
